--- a/styles/homes.module.css
+++ b/styles/homes.module.css
@@ -42,7 +42,7 @@
 .perfil img{
     width: 75px;
     height: 72px;
-    border: 3px solid #FB8E01;
+    border: 3px solid #ddd;
     border-radius: 50%;
     display: flex;
 
